Fix spacing issue between pages and settings nav
Due to the use of grids to separate the navigation between pages and
user support there was an awkward amount of unfilled space. This removes
the divided grids in favor of one grid for the entire navigation and
using margins to push the user support pages slightly lower.

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,11 +26,10 @@ body {
     background-color: var(--primary-color);
     color: white;
     display: grid;
-    grid-template: 1fr 3fr 4fr / 1fr;
+    grid-template: 125px 1fr / 1fr;
     grid-template-areas:
         'branding'
-        'pages'
-        'preferences';
+        'navigation';
 }
 
 ul {
@@ -59,8 +58,7 @@ li {
     height: 50px;
 }
 
-.pages svg,
-.preferences svg {
+.navigation svg {
     fill: white;
     width: 30px;
     height: 30px;
@@ -79,12 +77,12 @@ li {
     padding: 20px 15px;
 }
 
-.pages {
-    grid-area: pages;
+.navigation {
+    grid-area: navigation;
 }
 
-.preferences {
-    grid-area: preferences;
+.pages {
+    margin-bottom: 50px;
 }
 
 .header {
